Fix navbar to always be visible when language is selected or x'ed out

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,11 @@ body {
   margin: auto;
 }
 
+.navbar {
+  margin-top: -50px;
+  margin-bottom: -20px;
+}
+
 span {
   width: 80%;
 }
